Fixed issue with overflow of the spinner container

--- a/src/style.css
+++ b/src/style.css
@@ -2,6 +2,7 @@
   height: 200px;
   width: 200px;
   background-color: gray;
+  overflow: hidden;
 }
 
 .wheel {
